--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <div class="player">
+    <p></p>
+  </div>
 </body>
 </html>
