--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">    <script src="libs/jquery-3.1.1.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">    <script src="libs/jquery-3.1.1.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/main.css" />
     <title>Top Soccer Player</title>
@@ -15,13 +15,16 @@
       </div>
         <div class="title">
           <p id="serieTitle">Top strzelcy Serie A</p>
-          <p>sezon 2015/2016</p>
+          <p id="season">sezon 2015/2016</p>
         </div>
     </div>
   </header>
   <section class="topscorers">
   </section>
   <footer>
+    <div class="bottom">
+      <p>powered by PGS</p>
+    </div>
   </footer>
 </body>
 </html>
